# windows

CLR/CppCLI/: .gitignore  CppCLI.sln  README.md
CLR/CppCLI2/: CppCLI.cpp  CppCLI.h  CppCLI.vcxproj  CppCLI.vcxproj.filters  Helper.cpp  Helper.h
Win32/: WindowsHello.sln
Win32/CLanguage/: .gitignore  CLanguage.vcxproj  README.md
Win32/CMakeProjectDWM/: CMakeProjectDWM.cpp  README.md
Win32/CMakeProjectHello/: CMakeProjectHello.cpp  CMakeProjectHello.h
Win32/COMFileDialog/: COMFileDialog.cpp  COMFileDialog.rc  COMFileDialog.vcxproj  COMFileDialog.vcxproj.filters  README.md  Resource.h
Win32/Direct2DCircle/: Direct2DCircle.cpp  Direct2DCircle.rc  Direct2DCircle.vcxproj  (+2 more)
WinRT/Gliese/: .gitignore  CMakeLists.txt  README.md  Venus.sln
WinRT/Gliese/CppCLI/: AssemblyInfo.cpp  CppCLI.cpp  CppCLI.vcxproj  Helper.cpp
WinRT/Gliese/CppWinRTComponent/: BgLabelControl.cpp  BgLabelControl.h  BgLabelControl.idl  Class.cpp  Class.h  Class.idl  CppWinRTComponent.vcxproj  CppWinRTComponent.vcxproj.filters  CppWinRTComponent_TemporaryKey.pfx  pch.h
WinRT/Gliese/CppWinRTComponent/Themes/: Generic.xaml
WinRT/Gliese/CppWinRTProjection/: CppWinRTProjection.csproj
WinRT/Gliese/CppWinRTProjection/nuget/: CppWinRTComponent.0.1.0-prerelease.nupkg  CppWinRTProjection.nuspec
WinRT/Gliese/CsWinRTApp/: App.xaml  App.xaml.cs  CsWinRTApp.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
WinRT/Gliese/CsWinRTApp/Properties/: launchSettings.json
WinRT/Gliese/CsWinRTApp/Themes/: Generic.xaml
WinRT/Gliese/Venus/: ImageFileInfo.cpp  ImageFileInfo.idl  MainWindow.xaml  MainWindow.xaml.cpp  Package.appxmanifest  Venus.vcxproj  Venus.vcxproj.filters  app.manifest
WinUI3/: .gitignore  CMakeLists.txt  CMakePresets.json  Venus.sln  vcpkg-configuration.json
WinUI3/Venus/: App.xaml  App.xaml.cpp  App.xaml.h  ImageFileInfo.h  MainWindow.idl  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  Venus.vcxproj  Venus.vcxproj.filters  pch.h  readme.txt
WinUI3/Venus.UI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Venus.UI.csproj  app.manifest
WinUI3/Venus.UI/Properties/: launchSettings.json
WindowsHello/: CMakeLists.txt  CMakePresets.json  WindowsHello.sln
(+40 files in other folders)
